--- a/custom_portal.css
+++ b/custom_portal.css
@@ -231,3 +231,40 @@ form label {
 .listing-apps li {
     margin: 7px;
 }
+
+
+.form-text,
+.login-form .form-text {
+    background: rgba(0, 0, 0, 0.5) !important;
+    color: #fff !important;
+}
+
+.form-text:hover,
+.form-text:active,
+.form-text:focus,
+.login-form .form-text:hover,
+.login-form .form-text:active,
+.login-form .form-text:focus {
+    background: rgba(0, 0, 0, 0.7) !important;
+}
+
+.login-form .form-text::placeholder {
+    color: #ccc !important;
+}
+
+.login-form .form-group {
+    background: transparent;
+}
+
+.login-form {
+    background: rgba(0, 0, 0, 0.6);
+    backdrop-filter: blur(5px);
+    box-shadow: 2px 2px 3px rgba(0, 0, 0, 0.2) !important;
+    border-radius: 5px;
+    padding: 20px;
+}
+
+.login-form label::before {
+    background: rgba(0, 0, 0, 0.6);
+    color: #aaa;
+}
