--- a/custom_portal.css
+++ b/custom_portal.css
@@ -14,11 +14,20 @@
     align-items: center;
     border-radius: 5px;
     box-shadow: 2px 2px 3px rgba(0, 0, 0, 0.5), -1px -1px 1px 0 #1b201c inset;
-    color: #fbfdfd;
+    font-size: 3.5em;
+    color: #e6e2ce;
+    padding: 0.2em;
+    width: 2.4em;
+    height: 2.4em;
+}
+
+.app-tile .name {
+    font-size: 0.27em;
 }
 
 .app-tile:hover,
-.app-tile:active {
+.app-tile:active,
+.app-tile:focus {
     top: 0 !important;
     left: 0 !important;
     background: rgba(113, 113, 100, 0.7) !important;
@@ -105,10 +114,8 @@
 }
 
 .ynh-logo {
+    z-index: 99;
     bottom: 40px !important;
-}
-
-.ynh-logo {
     filter: drop-shadow(2px -2px 1px #1f344e70)drop-shadow(-2px 2px 1px #1f344e70)drop-shadow(-2px -2px 1px #1f344e70)drop-shadow(2px 2px 1px #1f344e70);
 }
 
