--- a/custom_portal.css
+++ b/custom_portal.css
@@ -7,7 +7,7 @@
     box-shadow: none;
 }
 
-.app-tile {
+.listing-apps .app-tile {
     border: 2px solid rgba(151, 140, 137, 0.5);
     background: rgba(0, 0, 0, 0.7) !important;
     justify-content: center;
