--- a/custom_portal.css
+++ b/custom_portal.css
@@ -114,7 +114,7 @@
 }
 
 .ynh-logo {
-    z-index: 99;
+    z-index: 99 !important;
     bottom: 40px !important;
     filter: drop-shadow(2px -2px 1px #1f344e70)drop-shadow(-2px 2px 1px #1f344e70)drop-shadow(-2px -2px 1px #1f344e70)drop-shadow(2px 2px 1px #1f344e70);
 }
